Texts are misaligned at the bottom of the homepage bug

--- a/src/sass/components/_footer.sass
+++ b/src/sass/components/_footer.sass
@@ -43,7 +43,13 @@ footer
         color: $white
         @include font-size(13px)
     p
+      text-align: center
       color: $white
-      text-align: right
       @include font-size(13px)
+      +tablet 
+        text-align: right
+    .copyright
+      display: flex
+      justify-content: flex-end
+      align-items: center
 
